Jailbreak VR Blockout Phase complete
FInished the core elements of the Jailbreak VR. Will add the proper 3D mesh content, music, UI and particle effects tomorrow.

--- a/VRTestProject/Assembly-CSharp.csproj
+++ b/VRTestProject/Assembly-CSharp.csproj
@@ -188,9 +188,13 @@
     <Compile Include="Assets\GoogleVR\Scripts\Utilities\Internal\GvrCursorHelper.cs" />
     <Compile Include="Assets\GoogleVR\Scripts\Utilities\Internal\SuppressMemoryAllocationErrorAttribute.cs" />
     <Compile Include="Assets\GoogleVR\Scripts\Video\GvrVideoPlayerTexture.cs" />
+    <Compile Include="Assets\Scripts\CastleInsideButton.cs" />
+    <Compile Include="Assets\Scripts\CastleOutsideButton.cs" />
     <Compile Include="Assets\Scripts\Door.cs" />
     <Compile Include="Assets\Scripts\DoorButton.cs" />
     <Compile Include="Assets\Scripts\DoorButtonRaise.cs" />
+    <Compile Include="Assets\Scripts\GameController.cs" />
+    <Compile Include="Assets\Scripts\Hostage.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <None Include="Assets\GoogleVR\Shaders\GvrUIOverlayFont.shader" />
     <None Include="Assets\GoogleVR\Shaders\GvrReticleShader.shader" />
